[package]
name = "mistery"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
amethyst = { version = "0.15.0", features = ["tiles"] }
serde = "1.0.105"
serde_derive = "1.0.105"
rand = "0.7.3"

[features]
default = ["metal", "optimized"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
optimized = ["amethyst/no-slow-safety-checks"]

[profile.dev]
debug = 0
